--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 ##theme: jekyll-theme-cayman
-theme: jekyll-theme-minimal
+##theme: jekyll-theme-minimal
 permalink: /upendrabhattarai.github.io/GMFBI
